# SocialCreditBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.txt  health_server.py  main.py  main_old.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_real_ai_test.py  run_real_ai_test_clean.py  run_tests.py  test_classification.py  test_discord_bot.py  test_observer.py  test_observer_basic.py  test_orchestrator.py  test_orchestrator_logic.py  test_simple.py
app/: __init__.py  config.py
app/infra/: bus.py  db.py  models.py  task_manager.py
app/ingest/: __init__.py  discord_client.py  error_handler.py  message_processor.py
app/llm/: __init__.py  classification.py  client.py  training_data.py
app/monitoring/: __init__.py  health.py
app/observer/: __init__.py  llm_observer.py
app/orchestrator/: __init__.py  aggregator.py  core.py  react_agent.py  react_context.py  react_orchestrator.py  react_state.py  react_tools.py
app/orchestrator/tools/: __init__.py  discord_responder.py
app/signals/: __init__.py  action_log.py  base.py  discord.py
tests/: __init__.py  test_e2e_system.py  test_unit_components.py
